--- a/templates/latestitems.html
+++ b/templates/latestitems.html
@@ -6,7 +6,7 @@
 			<div>
 				<!--<div class="col-md-1"></div>-->
 					<div class="w3-text-grey" style="font-weight:bold;padding:8px 16px;">
-                        {{item.title}}
+                        {{item.title}} <i style="font-weight:normal;">({{categories[item.category_id].name}})</i>
 					</div>
 				<!--<div class="col-md-1"></div>-->
 			</div>
