--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -71,6 +71,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 {% if showCategoryItem == 'true' %} 
     {% include "categoryitems.html" %}
 {% endif %}
+{% if showDescription == 'true' %} 
+    {% include "itemdescription.html" %}
+{% endif %}
 <!--
 <div class="w3-main" style="margin-left:300px">
     <div style="margin-left:50px;margin-top:210px" >
