--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -16,7 +16,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <!-- Sidebar/menu -->
 <nav class="w3-sidebar w3-bar-block w3-white w3-animate-left w3-text-grey w3-collapse w3-top w3-center" style="z-index:3;width:300px;font-weight:bold" id="mySidebar"><br>
-  <h3 class="w3-padding-64 w3-center"><b>Catalog App</b></h3>
+  <a href="{{url_for('showCategoriesLatestItems')}}"><h3 class="w3-padding-64 w3-center"><b>Catalog App</b></h3></a>
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-padding w3-hide-large">CLOSE</a>
   <h4 class="w3-bar-item"><b>Categories</b></h4>
   <!---<a href="#" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a> 
@@ -27,20 +27,22 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 		<a href = "{{url_for('showCategoriesSelectedItems', name = category.name)}}" class="w3-bar-item w3-button">
 			{{category.name}}
 		</a>
-	{% endfor %}
-        <!--{% if currentUserName == 'none' %} -->
+	{% endfor %}    
+        {% if currentUserName == 'none' %} 
+        <div style="position: absolute; bottom:100px;left:120px;">
             <a href="{{url_for('showLogin')}}">
-				<button class="btn btn-default" style="margin-top:50px">
-					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Login
-				</button>
+				<button class="btn btn-default" style="margin-top:50px"><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Login</button>
 			</a>
-       <!-- {% else %}            
-            <h3>{{currentUserName}}<a href="{{url_for('disconnect')}}">
-				<button class="btn btn-default" id="new-restaurant">
-					<span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Logout
-				</button></a>     
-            </h3>            
-        {% endif %} -->
+        </div>    
+        {% else %}  
+        <div style="position: absolute; bottom:100px;margin-left:auto;margin-right:auto;width: 300px">
+            <b>{{currentUserName}}</b><br>
+            <a href="{{url_for('disconnect')}}">
+                <button class="btn btn-default" style="margin-top:10px"><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Logout</button>
+            </a>
+        </div>    
+        {% endif %}
+    </div>
 </nav>
 
 <!-- Top menu on small screens -->
