--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -33,6 +33,7 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
             <a href="{{url_for('showLogin')}}">
 				<button class="btn btn-default" style="margin-top:50px"><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>Login</button>
 			</a>
+            <br><a href="{{url_for('getUserInfo')}}"><button class="btn btn-default" style="margin-top:50px"><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>New Profile</button></a>
         </div>    
         {% else %}  
         <div style="position: absolute; bottom:100px;margin-left:auto;margin-right:auto;width: 300px">
@@ -75,6 +76,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 {% endif %}
 {% if showDescription == 'true' %} 
     {% include "itemdescription.html" %}
+{% endif %}
+{% if newUser == 'true' %} 
+    {% include "userinfo.html" %}
 {% endif %}
 <!--
 <div class="w3-main" style="margin-left:300px">
