--- a/templates/latestitems.html
+++ b/templates/latestitems.html
@@ -1,5 +1,12 @@
 <div class="w3-main" style="margin-left:300px">
     <div style="margin-left:50px;margin-top:210px" >
+    {% if currentUserName != "none" %}
+        <a href = "#">
+            <div class="w3-text-grey" style="font-weight:bold;padding:8px 16px;">
+                Add New Item
+            </div>
+        </a>
+    {% endif %}
       <h4 class="w3-text-grey"><b>Latest Items</b></h4>
   	{% for item in items %}
         <!-- below is needed to get right name of the category based on item -->
