- Create New Item workflow added after user is logged in

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -80,6 +80,9 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 {% if newUser == 'true' %} 
     {% include "userinfo.html" %}
 {% endif %}
+{% if newItem == 'true' %} 
+    {% include "newitem.html" %}
+{% endif %}
 <!--
 <div class="w3-main" style="margin-left:300px">
     <div style="margin-left:50px;margin-top:210px" >
