- Adding support for deleting the item for for owner of the item

--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -83,6 +83,12 @@ body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 {% if newItem == 'true' %} 
     {% include "newitem.html" %}
 {% endif %}
+{% if editItem == 'true' %} 
+    {% include "edititem.html" %}
+{% endif %}
+{% if deleteItem == 'true' %} 
+    {% include "deleteitem.html" %}
+{% endif %}
 <!--
 <div class="w3-main" style="margin-left:300px">
     <div style="margin-left:50px;margin-top:210px" >
