--- a/templates/itemdescription.html
+++ b/templates/itemdescription.html
@@ -9,7 +9,7 @@
 					</div>
                     {% if currentUserName != "none" %}
                         <div class="w3-text-grey" style="padding:8px 16px;">
-                        <a href = "{{url_for('editExistingItem', name = name, title = item.title)}}">Edit</a> | <a href = "#">Delete</a>
+                        <a href = "{{url_for('editExistingItem', name = name, title = item.title)}}">Edit</a> | <a href = "{{url_for('deleteExistingItem', name = name, title = item.title)}}">Delete</a>
                         </div>
                     {% endif %}                    
 				<!--<div class="col-md-1"></div>-->
