- Adding JSON Endpoint - Fixing logic to show Latest Items which now shows last 10 items added

--- a/templates/latestitems.html
+++ b/templates/latestitems.html
@@ -7,7 +7,7 @@
             </div>
         </a>
     {% endif %}
-      <h4 class="w3-text-grey"><b>Latest Items</b></h4>
+      <h4 class="w3-text-grey"><b>Latest Items</b> (Last 10 added)</h4>
   	{% for item in items %}
         <!-- below is needed to get right name of the category based on item -->
         {% for category in categories %}
