- Adding two new JSON Endpoints - /category/category_id/JSON and /category/category_id/item/item_id/JSON - Updating edititem.html so it will make sure that require inputs are provided before form submit can happpen - Removing most PEP8 compliance issues - Adding requirements.txt file - Updating README.md

--- a/templates/edititem.html
+++ b/templates/edititem.html
@@ -3,11 +3,11 @@
       <h4 class="w3-text-grey"><b>Edit Item</b></h4>
 <form action="#" method = "post" autocomplete="on">
   Title:
-  <br><input type="text" name="title" value="{{title}}"><br>
+  <br><input type="text" name="title" value="{{title}}" required><br>
   Description:
   <br><input type="text" name="desc" value="{{item.description}}"><br>
   Category:
-  <br><input type="text" name="name" value="{{name}}"><br>
+  <br><input type="text" name="name" value="{{name}}" required><br>
   <br>
 <input type="submit" value="Update">
 </form>
